# website_opener

./: Cargo.toml  LICENSE  README.md  shell-completions-guide.md
src/: browser.rs  cli.rs  config.rs  main.rs
