[package]
name = "website_opener"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
clap          = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde         = { version = "1", features = ["derive"] }
toml          = "0.8"
dirs          = "5"
anyhow        = "1"
